dataengines/weather/envcan: Add a literal instead of a stringview

Not fully sure this fixes the crash, but the traces point to a
weird issue in QStringBuilder when trying to reserve a new size
for the QString in this line, so better safe than sorry.

Current code for Plasma/6.5 (in kdeplasma-addons) already has this
change applied

BUG: 508213
FIXED-IN: 6.4.6